with Password Safe version 3.07. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.07
=====================
[1675716] <ESC> to close application now works

New Features for 3.07
========================


Password Safe 3.06.01 Release Notes - February 2007
===================================================

This note describe the new features, fixed bugs and known problems
with Password Safe version 3.07. For a short description of Password
Safe, please see the accompanying README.txt file. For more
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to previous
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.06.01
=====================
[1660721] Autotype menu & shortcut no longer disabled if field is empty.
[TODO] - Update online help with appendix describing
dbase/cfg/registry preference logic (or lack of thereof).
[TODO] - Add '-c config file path' command line option?

New Features for 3.06.01
========================
[] - Password expiration notice can now be given a few days prior to
actual expiration
[] - Exported/imported text format is now documented in online help

New Features for 3.06
=====================
Support for U3 (disk-on-key).

Changes to Existing Features in 3.06
====================================
[] Opening dialog now shows recently opened databases in dropdown list.
[] File opened in initial dialog now added to recent files list.
[1634251] Password expiration date can now be specified relatively,
e.g., "45 days from now".
[] All dates and times are now displayed in the local format.

Bugs fixed in 3.06
==================
[1625557] No longer crashes when invoking help after using Hot-Key.